crates/biome_html_parser/tests/html_specs/ok/svelte/snippet_nested.svelte
{#snippet outer()}
  <div>
    {#snippet inner()}
      <p>Inner content</p>
    {/snippet}
  </div>
{/snippet}
