crates/biome_html_parser/tests/html_specs/error/svelte/snippet_unclosed.svelte
{#snippet greeting()}
  <p>Hello!</p>
{/snippet

{@render greeting()}
